Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 384
    • Issues 384
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 62
    • Merge requests 62
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • FilesFiles
  • Issues
  • #3038

Crash on gnome-shell search

Testing out GNOME OS nightly on physical hardware, upon logging in and typing in the search box interactivity comes to a halt. This is a fresh install, so clearly not files being search.

Turns out sytsemd-coredump was going crazy trying to zstd compress a coredump from Nautilus.

The crashing thread is:

                Stack trace of thread 2715:
                #0  0x00007f4541b15311 g_type_check_instance_is_fundamentally_a (libgobject-2.0.so.0 + 0x3e311)
                #1  0x00007f4541af6900 g_object_notify (libgobject-2.0.so.0 + 0x1f900)
                #2  0x0000564f3413ba63 cancel_current_search (nautilus + 0x4ca63)
                #3  0x0000564f3413bf9d handle_get_subsearch_result_set (nautilus + 0x4cf9d)
                #4  0x0000564f341909b5 _g_dbus_codegen_marshal_BOOLEAN__OBJECT_BOXED_BOXED (nautilus + 0xa19b5)
                #5  0x00007f4541aef43a g_closure_invoke (libgobject-2.0.so.0 + 0x1843a)
                #6  0x00007f4541b0396c signal_emit_unlocked_R (libgobject-2.0.so.0 + 0x2c96c)
                #7  0x00007f4541b0afd6 signal_emitv_unlocked (libgobject-2.0.so.0 + 0x33fd6)
                #8  0x0000564f3419111b _nautilus_shell_search_provider2_skeleton_handle_method_call (nautilus + 0xa211b)
                #9  0x00007f4541e2c046 g_dbus_interface_method_dispatch_helper (libgio-2.0.so.0 + 0x141046)
                #10 0x00007f4541e10508 call_in_idle_cb (libgio-2.0.so.0 + 0x125508)
                #11 0x00007f45428f8a97 g_main_dispatch (libglib-2.0.so.0 + 0x5ea97)
                #12 0x00007f45428faba7 g_main_context_dispatch_unlocked (libglib-2.0.so.0 + 0x60ba7)
                #13 0x00007f45428fb2c3 g_main_context_iteration (libglib-2.0.so.0 + 0x612c3)
                #14 0x00007f4541de295d g_application_run (libgio-2.0.so.0 + 0xf795d)
                #15 0x0000564f3412cd8a main (nautilus + 0x3dd8a)
                #16 0x00007f45415c8b8a __libc_start_call_main (libc.so.6 + 0x27b8a)
                #17 0x00007f45415c8c4b __libc_start_main_impl (libc.so.6 + 0x27c4b)
                #18 0x0000564f3412cdd5 _start (nautilus + 0x3ddd5)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking