search-engine-simple: Fix search provider crash

Call the correct function that has an idle callback. This prevents
a crash caused by using the engine after directly freeing it.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/3038